--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ setenv =
 commands =
    poetry run python --version
    poetry install -v {env:INSTALL_OPTS}
-   poetry run pytest --quiet --cov=generated/nidaqmx --cov-append --cov-report= --junitxml=pytests-{envname}.xml {env:PYTEST_OPTS} {posargs}
+   poetry run pytest --quiet --cov=generated/nidaqmx --cov-append --cov-report= --junitxml=test_results/system-{envname}.xml {env:PYTEST_OPTS} {posargs}
 
 [testenv:clean]
 commands = poetry run coverage erase
