--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,7 +81,7 @@ tox = [
 
 [tool.black]
 line-length = 100
-extend_exclude = ".tox,docs,generated,src/codegen/metadata,src/codegen/templates"
+extend_exclude = ".tox/|docs/|generated/|src/codegen/metadata/|src/codegen/templates/|src/handwritten/"
 
 [tool.ni-python-styleguide]
 extend_exclude = ".tox,docs,generated,src/codegen/metadata,src/codegen/templates,src/handwritten"
