CI: Use bash to rename test results
Signed-off-by: Brad Keryan <brad.keryan@ni.com>

--- a/.github/workflows/run_system_tests.yml
+++ b/.github/workflows/run_system_tests.yml
@@ -27,6 +27,7 @@ jobs:
           for result in test_results/*.xml; do
             mv $result ${result%.xml}_${{ matrix.configuration }}.xml
           done
+        shell: bash
         if: always()
       - name: Upload test results
         uses: actions/upload-artifact@v3
