CI: Revert filenames to kebab-case
Both Tox envs and GitHub labels use kebab-case, so why fight it?

Signed-off-by: Brad Keryan <brad.keryan@ni.com>

--- a/.github/workflows/run_system_tests.yml
+++ b/.github/workflows/run_system_tests.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Rename test results
         run: |
           for result in test_results/*.xml; do
-            mv $result ${result%.xml}_${{ matrix.configuration }}.xml
+            mv $result ${result%.xml}-${{ matrix.configuration }}.xml
           done
         shell: bash
         if: always()
