CI: Don't forget to run report_test_results
Signed-off-by: Brad Keryan <brad.keryan@ni.com>

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,3 +23,8 @@ jobs:
     name: Run system tests
     uses: ./.github/workflows/run_system_tests.yml
     needs: [build, run_unit_tests]
+  report_test_results:
+    name: Report test results
+    uses: ./.github/workflows/report_test_results.yml
+    needs: [run_unit_tests, run_system_tests]
+    if: always()
