--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ grpcio = [
   {version=">=1.49.0,<2.0", python="^3.8", optional = true},
 ]
 protobuf = { version = "^4.21", optional = true }
+hightime = "^0.2.1"
 
 [tool.poetry.extras]
 docs = ["sphinx", "sphinx_rtd_theme"]
