--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,10 @@ grpc = ["grpcio", "protobuf"]
 [tool.poetry.group.codegen.dependencies]
 click = "^8.1"
 Mako = "^1.2"
-grpcio-tools = "1.49.1"
+grpcio-tools = [
+  {version = "1.49.1", python = ">=3.8,<3.12"},
+  {version = "1.59.0", python = "^3.12"},
+]
 mypy-protobuf = ">=3.4"
 
 [tool.poetry.group.lint.dependencies]
