pyproject.toml: NumPy doesn't support 3.8 and 3.12 with a single version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,10 @@ packages = [{ include = "nidaqmx", from = "generated" }]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-numpy = ">=1.22"
+numpy = [
+  {version = ">=1.22", python = ">=3.8,<3.12"},
+  {version = ">=1.26", python = ">=3.12,<3.13"},
+]
 deprecation = ">=2.1"
 # Documentation, must be in main dependencies (but optional) list for
 # readthedocs integration.
