--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,6 @@ classifiers = [
     "Operating System :: Microsoft :: Windows",
     "Operating System :: POSIX",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
@@ -31,25 +30,15 @@ exclude = ["nidaqmx/tests"]
 packages = [{ include = "nidaqmx", from = "generated" }]
 
 [tool.poetry.dependencies]
-python = "^3.7"
-numpy = [
-  # numpy 1.22 dropped support for Python 3.7.
-  {version=">=1.20,<1.22", python="<3.8"},
-  {version=">=1.22", python="^3.8"},
-]
+python = "^3.8"
+numpy = ">=1.22"
 deprecation = ">=2.1"
-# This functionality was merged into python stdlib beginning in 3.8
-importlib_metadata = {version="^4.2", python="~3.7"}
 # Documentation, must be in main dependencies (but optional) list for
 # readthedocs integration.
 # See https://github.com/readthedocs/readthedocs.org/issues/4912.
 Sphinx = {version="^4.3", optional=true}
 sphinx_rtd_theme = {version="^1.0", optional=true}
-grpcio = [
-  # no 32-bit wheel for 1.53.0 and later
-  {version=">=1.49.0,<1.53", python="<3.8", optional = true}, 
-  {version=">=1.49.0,<2.0", python="^3.8", optional = true},
-]
+grpcio = {version=">=1.49.0,<2.0", optional = true}
 protobuf = { version = "^4.21", optional = true }
 hightime = "^0.2.1"
 
@@ -74,11 +63,7 @@ pytest = ">=7.2"
 pytest-cov = ">=4.0"
 pytest-mock = ">=3.0"
 pykka = ">=3.0"
-tox = [
-  # tox 4.0 requires importlib_metadata >= 5.1 but we use importlib_metadata < 5.0 for Python 3.7
-  {version="^3.24", python="<3.8"},
-  {version=">=3.24", python="^3.8"},
-]
+tox = ">=3.24"
 
 [tool.black]
 line-length = 100
