Add Offset Nulling Calibration API support for nidaqmx-python

--- a/tests/max_config/examplesMaxConfig.ini
+++ b/tests/max_config/examplesMaxConfig.ini
@@ -14,6 +14,13 @@ DevIsSimulated = 1
 CompactDAQ.ChassisDevName = cDAQ1
 CompactDAQ.SlotNum = 1
 
+[DAQmxCDAQModule cDAQ1Mod2]
+ProductType = NI 9214
+DevSerialNum = 0x0
+DevIsSimulated = 1
+CompactDAQ.ChassisDevName = cDAQ1
+CompactDAQ.SlotNum = 2
+
 [DAQmxDevice Dev1]
 ProductType = PCIe-6363
 DevSerialNum = 0x0
