--- a/tests/max_config/nidaqmxMaxConfig.ini
+++ b/tests/max_config/nidaqmxMaxConfig.ini
@@ -2,6 +2,28 @@
 MajorVersion = 21
 MinorVersion = 8
 
+[DAQmxChannel VoltageTesterChannel]
+AI.MeasType = Voltage
+AI.Voltage.Units = Volts
+AI.TermCfg = Differential
+AI.Max = 10
+AI.Min = -10
+ChanType = Analog Input
+PhysicalChanName = tsVoltageTester1/ai0
+Descr = 
+Author = Test Author
+
+[DAQmxChannel VoltageTesterChannel2]
+AI.MeasType = Voltage
+AI.Voltage.Units = Volts
+AI.TermCfg = Differential
+AI.Max = 5
+AI.Min = -5
+ChanType = Analog Input
+PhysicalChanName = tsVoltageTester1/ai1
+Descr = Another channel
+Author = Another Test Author
+
 [DAQmxChannel AOTesterTask/VoltageOut_0]
 AO.OutputType = Voltage
 AO.Voltage.Units = Volts
@@ -29,40 +51,6 @@ ChanType = Analog Output
 AO.TermCfg = Differential
 PhysicalChanName = aoTester/ao2
 
-[DAQmxTask AOTesterTask]
-Channels = AOTesterTask/VoltageOut_0, AOTesterTask/VoltageOut_1, AOTesterTask/VoltageOut_2
-SampQuant.SampMode = Finite Samples
-SampClk.ActiveEdge = Rising
-SampQuant.SampPerChan = 100
-SampClk.Rate = 1000
-SampTimingType = Sample Clock
-RegenMode = Allow Regeneration
-SampClk.Src =
-
-[DAQmxChannel VoltageTesterChannel]
-AI.MeasType = Voltage
-AI.Voltage.Units = Volts
-AI.TermCfg = Differential
-AI.Max = 10
-AI.Min = -10
-ChanType = Analog Input
-PhysicalChanName = tsVoltageTester1/ai0
-Descr = 
-Author = "Test Author"
-AllowInteractiveEditing = True
-
-[DAQmxChannel VoltageTesterChannel2]
-AI.MeasType = Voltage
-AI.Voltage.Units = Volts
-AI.TermCfg = Differential
-AI.Max = 5
-AI.Min = -5
-ChanType = Analog Input
-PhysicalChanName = tsVoltageTester1/ai1
-Descr = "Another channel"
-Author = "Another Test Author"
-AllowInteractiveEditing = True
-
 [DAQmxChannel VoltageTesterTask/Voltage_0]
 AI.MeasType = Voltage
 AI.Voltage.Units = Volts
@@ -71,6 +59,16 @@ AI.Max = 10
 AI.Min = -10
 ChanType = Analog Input
 PhysicalChanName = tsVoltageTester1/ai0
+
+[DAQmxTask AOTesterTask]
+Channels = AOTesterTask/VoltageOut_0, AOTesterTask/VoltageOut_1, AOTesterTask/VoltageOut_2
+SampQuant.SampMode = Finite Samples
+SampClk.ActiveEdge = Rising
+SampQuant.SampPerChan = 100
+SampClk.Rate = 1000
+SampTimingType = Sample Clock
+RegenMode = Allow Regeneration
+SampClk.Src = 
 
 [DAQmxTask VoltageTesterTask]
 Channels = VoltageTesterTask/Voltage_0
@@ -81,17 +79,15 @@ SampClk.Rate = 1000
 SampTimingType = Sample Clock
 SampClk.Src = 
 Author = Test Author
-AllowInteractiveEditing = True
 
 [DAQmxScale double_gain_scale]
+Descr = Twice the gain
 Lin.Slope = 2
 Lin.YIntercept = 0
 PreScaledUnits = Volts
 ScaledUnits = 
 ScaleType = Linear
 Author = Test Author
-AllowInteractiveEditing = True
-Descr = Twice the gain
 
 [DAQmxScale no_scaling_scale]
 Lin.Slope = 1
@@ -107,6 +103,15 @@ PreScaledUnits = Volts
 ScaledUnits = 
 ScaleType = Polynomial
 
+[DAQmxDevice aoTester]
+ProductType = PXIe-4322
+DevSerialNum = 0x0
+DevIsSimulated = 1
+ProductNum = 0x76ABC4C4
+BusType = PXIe
+PXI.ChassisNum = 1
+PXI.SlotNum = 3
+
 [DAQmxDevice bridgeTester]
 ProductType = PXIe-4331
 DevSerialNum = 0x0
@@ -116,7 +121,30 @@ BusType = PXIe
 PXI.ChassisNum = 1
 PXI.SlotNum = 2
 
-[DAQmxAccessory RM-24999_A/bridgeTester/0]
+[DAQmxDevice chargeTester]
+ProductType = PXIe-4480
+DevSerialNum = 0x0
+DevIsSimulated = 1
+ProductNum = 0x7844C4C4
+BusType = PXIe
+PXI.ChassisNum = 1
+PXI.SlotNum = 4
+
+[DAQmxDevice dmmTester]
+ProductType = NI myDAQ
+DevSerialNum = 0x0
+DevIsSimulated = 1
+ProductNum = 0x755B
+BusType = USB
+
+[DAQmxDevice dsaTester]
+ProductType = PXIe-4466
+DevSerialNum = 0x0
+DevIsSimulated = 1
+ProductNum = 0x7A8DC4C4
+BusType = PXIe
+PXI.ChassisNum = 1
+PXI.SlotNum = 5
 
 [DAQmxDevice nidaqmxMultithreadingTester1]
 ProductType = PCIe-6363
@@ -154,14 +182,27 @@ BusType = PCIe
 PCI.BusNum = 0x0
 PCI.DevNum = 0x0
 
-[DAQmxDevice aoTester]
-ProductType = PXIe-4322
+[DAQmxDevice positionTester]
+ProductType = PXIe-4340
 DevSerialNum = 0x0
 DevIsSimulated = 1
-ProductNum = 0x76ABC4C4
+ProductNum = 0x7829C4C4
 BusType = PXIe
 PXI.ChassisNum = 1
-PXI.SlotNum = 3
+PXI.SlotNum = 6
+
+[DAQmxAccessory RM-24999_A/bridgeTester/0]
+
+[DAQmxCDAQChassis cdaqChassisTester]
+ProductType = cDAQ-9185
+DevSerialNum = 0x0
+DevIsSimulated = 1
+BusType = TCP/IP
+TCPIP.Hostname = 
+TCPIP.EthernetIP = 0.0.0.0
+TCPIP.EthernetMAC = 00:00:00:00:00:00
+TCPIP.EthernetMDNSServiceInstance = 
+TCPIP.DevIsReserved = 0
 
 [DAQmxCDAQChassis tsChassisTester]
 ProductType = TS-15000
@@ -189,13 +230,3 @@ DevIsSimulated = 1
 CompactDAQ.ChassisDevName = tsChassisTester
 CompactDAQ.SlotNum = 3
 
-[DAQmxCDAQChassis cdaqChassisTester]
-ProductType = cDAQ-9185
-DevSerialNum = 0x0
-DevIsSimulated = 1
-BusType = TCP/IP
-TCPIP.Hostname = 
-TCPIP.EthernetIP = 0.0.0.0
-TCPIP.EthernetMAC = 00:00:00:00:00:00
-TCPIP.EthernetMDNSServiceInstance = 
-TCPIP.DevIsReserved = 0
