--- a/tests/max_config/nidaqmxMaxConfig.ini
+++ b/tests/max_config/nidaqmxMaxConfig.ini
@@ -128,7 +128,7 @@ DevIsSimulated = 1
 ProductNum = 0x7844C4C4
 BusType = PXIe
 PXI.ChassisNum = 1
-PXI.SlotNum = 4
+PXI.SlotNum = 5
 
 [DAQmxDevice dmmTester]
 ProductType = NI myDAQ
@@ -144,7 +144,7 @@ DevIsSimulated = 1
 ProductNum = 0x7A8DC4C4
 BusType = PXIe
 PXI.ChassisNum = 1
-PXI.SlotNum = 5
+PXI.SlotNum = 6
 
 [DAQmxDevice nidaqmxMultithreadingTester1]
 ProductType = PCIe-6363
@@ -188,8 +188,17 @@ DevSerialNum = 0x0
 DevIsSimulated = 1
 ProductNum = 0x7829C4C4
 BusType = PXIe
+PXI.ChassisNum = 4294967295
+PXI.SlotNum = 4294967295
+
+[DAQmxDevice tempTester]
+ProductType = PXIe-4353
+DevSerialNum = 0x0
+DevIsSimulated = 1
+ProductNum = 0x74B2C4C4
+BusType = PXIe
 PXI.ChassisNum = 1
-PXI.SlotNum = 6
+PXI.SlotNum = 7
 
 [DAQmxAccessory RM-24999_A/bridgeTester/0]
 
