--- a/tests/max_config/nidaqmxMaxConfig.ini
+++ b/tests/max_config/nidaqmxMaxConfig.ini
@@ -2,28 +2,6 @@
 MajorVersion = 21
 MinorVersion = 8
 
-[DAQmxChannel VoltageTesterChannel]
-AI.MeasType = Voltage
-AI.Voltage.Units = Volts
-AI.TermCfg = Differential
-AI.Max = 10
-AI.Min = -10
-ChanType = Analog Input
-PhysicalChanName = tsVoltageTester1/ai0
-Descr = 
-Author = Test Author
-
-[DAQmxChannel VoltageTesterChannel2]
-AI.MeasType = Voltage
-AI.Voltage.Units = Volts
-AI.TermCfg = Differential
-AI.Max = 5
-AI.Min = -5
-ChanType = Analog Input
-PhysicalChanName = tsVoltageTester1/ai1
-Descr = Another channel
-Author = Another Test Author
-
 [DAQmxChannel AOTesterTask/VoltageOut_0]
 AO.OutputType = Voltage
 AO.Voltage.Units = Volts
@@ -51,15 +29,6 @@ ChanType = Analog Output
 AO.TermCfg = Differential
 PhysicalChanName = aoTester/ao2
 
-[DAQmxChannel VoltageTesterTask/Voltage_0]
-AI.MeasType = Voltage
-AI.Voltage.Units = Volts
-AI.TermCfg = Differential
-AI.Max = 10
-AI.Min = -10
-ChanType = Analog Input
-PhysicalChanName = tsVoltageTester1/ai0
-
 [DAQmxTask AOTesterTask]
 Channels = AOTesterTask/VoltageOut_0, AOTesterTask/VoltageOut_1, AOTesterTask/VoltageOut_2
 SampQuant.SampMode = Finite Samples
@@ -68,7 +37,40 @@ SampQuant.SampPerChan = 100
 SampClk.Rate = 1000
 SampTimingType = Sample Clock
 RegenMode = Allow Regeneration
-SampClk.Src = 
+SampClk.Src =
+
+[DAQmxChannel VoltageTesterChannel]
+AI.MeasType = Voltage
+AI.Voltage.Units = Volts
+AI.TermCfg = Differential
+AI.Max = 10
+AI.Min = -10
+ChanType = Analog Input
+PhysicalChanName = tsVoltageTester1/ai0
+Descr = 
+Author = "Test Author"
+AllowInteractiveEditing = True
+
+[DAQmxChannel VoltageTesterChannel2]
+AI.MeasType = Voltage
+AI.Voltage.Units = Volts
+AI.TermCfg = Differential
+AI.Max = 5
+AI.Min = -5
+ChanType = Analog Input
+PhysicalChanName = tsVoltageTester1/ai1
+Descr = "Another channel"
+Author = "Another Test Author"
+AllowInteractiveEditing = True
+
+[DAQmxChannel VoltageTesterTask/Voltage_0]
+AI.MeasType = Voltage
+AI.Voltage.Units = Volts
+AI.TermCfg = Differential
+AI.Max = 10
+AI.Min = -10
+ChanType = Analog Input
+PhysicalChanName = tsVoltageTester1/ai0
 
 [DAQmxTask VoltageTesterTask]
 Channels = VoltageTesterTask/Voltage_0
@@ -79,15 +81,17 @@ SampClk.Rate = 1000
 SampTimingType = Sample Clock
 SampClk.Src = 
 Author = Test Author
+AllowInteractiveEditing = True
 
 [DAQmxScale double_gain_scale]
-Descr = Twice the gain
 Lin.Slope = 2
 Lin.YIntercept = 0
 PreScaledUnits = Volts
 ScaledUnits = 
 ScaleType = Linear
 Author = Test Author
+AllowInteractiveEditing = True
+Descr = Twice the gain
 
 [DAQmxScale no_scaling_scale]
 Lin.Slope = 1
@@ -120,6 +124,8 @@ ProductNum = 0x74A9C4C4
 BusType = PXIe
 PXI.ChassisNum = 1
 PXI.SlotNum = 2
+
+[DAQmxAccessory RM-24999_A/bridgeTester/0]
 
 [DAQmxDevice chargeTester]
 ProductType = PXIe-4480
@@ -200,19 +206,6 @@ BusType = PXIe
 PXI.ChassisNum = 1
 PXI.SlotNum = 7
 
-[DAQmxAccessory RM-24999_A/bridgeTester/0]
-
-[DAQmxCDAQChassis cdaqChassisTester]
-ProductType = cDAQ-9185
-DevSerialNum = 0x0
-DevIsSimulated = 1
-BusType = TCP/IP
-TCPIP.Hostname = 
-TCPIP.EthernetIP = 0.0.0.0
-TCPIP.EthernetMAC = 00:00:00:00:00:00
-TCPIP.EthernetMDNSServiceInstance = 
-TCPIP.DevIsReserved = 0
-
 [DAQmxCDAQChassis tsChassisTester]
 ProductType = TS-15000
 DevSerialNum = 0x0
@@ -238,4 +231,15 @@ DevSerialNum = 0x0
 DevIsSimulated = 1
 CompactDAQ.ChassisDevName = tsChassisTester
 CompactDAQ.SlotNum = 3
+
+[DAQmxCDAQChassis cdaqChassisTester]
+ProductType = cDAQ-9185
+DevSerialNum = 0x0
+DevIsSimulated = 1
+BusType = TCP/IP
+TCPIP.Hostname = 
+TCPIP.EthernetIP = 0.0.0.0
+TCPIP.EthernetMAC = 00:00:00:00:00:00
+TCPIP.EthernetMDNSServiceInstance = 
+TCPIP.DevIsReserved = 0
 
