--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,8 +40,8 @@ deprecation = ">=2.1"
 # Documentation, must be in main dependencies (but optional) list for
 # readthedocs integration.
 # See https://github.com/readthedocs/readthedocs.org/issues/4912.
-Sphinx = {version="^5.0", optional=true}
-sphinx_rtd_theme = {version="^1.0", optional=true}
+Sphinx = {version=">=5.0", optional=true}
+sphinx_rtd_theme = {version=">=1.0", optional=true}
 grpcio = {version=">=1.49.0,<2.0", optional = true}
 protobuf = { version = "^4.21", optional = true }
 hightime = "^0.2.1"
