Add AI create channel tests (#485)

--- a/tests/max_config/nidaqmxMaxConfig.ini
+++ b/tests/max_config/nidaqmxMaxConfig.ini
@@ -107,6 +107,15 @@ PreScaledUnits = Volts
 ScaledUnits = 
 ScaleType = Polynomial
 
+[DAQmxDevice aoTester]
+ProductType = PXIe-4322
+DevSerialNum = 0x0
+DevIsSimulated = 1
+ProductNum = 0x76ABC4C4
+BusType = PXIe
+PXI.ChassisNum = 1
+PXI.SlotNum = 3
+
 [DAQmxDevice bridgeTester]
 ProductType = PXIe-4331
 DevSerialNum = 0x0
@@ -117,6 +126,31 @@ PXI.ChassisNum = 1
 PXI.SlotNum = 2
 
 [DAQmxAccessory RM-24999_A/bridgeTester/0]
+
+[DAQmxDevice chargeTester]
+ProductType = PXIe-4480
+DevSerialNum = 0x0
+DevIsSimulated = 1
+ProductNum = 0x7844C4C4
+BusType = PXIe
+PXI.ChassisNum = 1
+PXI.SlotNum = 5
+
+[DAQmxDevice dmmTester]
+ProductType = NI myDAQ
+DevSerialNum = 0x0
+DevIsSimulated = 1
+ProductNum = 0x755B
+BusType = USB
+
+[DAQmxDevice dsaTester]
+ProductType = PXIe-4466
+DevSerialNum = 0x0
+DevIsSimulated = 1
+ProductNum = 0x7A8DC4C4
+BusType = PXIe
+PXI.ChassisNum = 1
+PXI.SlotNum = 6
 
 [DAQmxDevice nidaqmxMultithreadingTester1]
 ProductType = PCIe-6363
@@ -154,14 +188,23 @@ BusType = PCIe
 PCI.BusNum = 0x0
 PCI.DevNum = 0x0
 
-[DAQmxDevice aoTester]
-ProductType = PXIe-4322
+[DAQmxDevice positionTester]
+ProductType = PXIe-4340
 DevSerialNum = 0x0
 DevIsSimulated = 1
-ProductNum = 0x76ABC4C4
+ProductNum = 0x7829C4C4
+BusType = PXIe
+PXI.ChassisNum = 4294967295
+PXI.SlotNum = 4294967295
+
+[DAQmxDevice tempTester]
+ProductType = PXIe-4353
+DevSerialNum = 0x0
+DevIsSimulated = 1
+ProductNum = 0x74B2C4C4
 BusType = PXIe
 PXI.ChassisNum = 1
-PXI.SlotNum = 3
+PXI.SlotNum = 7
 
 [DAQmxCDAQChassis tsChassisTester]
 ProductType = TS-15000
@@ -199,3 +242,4 @@ TCPIP.EthernetIP = 0.0.0.0
 TCPIP.EthernetMAC = 00:00:00:00:00:00
 TCPIP.EthernetMDNSServiceInstance = 
 TCPIP.DevIsReserved = 0
+
