Add unit test for cfg_time_start_trig

--- a/tests/max_config/nidaqmxMaxConfig.ini
+++ b/tests/max_config/nidaqmxMaxConfig.ini
@@ -257,3 +257,27 @@ DevIsSimulated = 1
 CompactDAQ.ChassisDevName = cdaqChassisTester
 CompactDAQ.SlotNum = 1
 
+[DAQmxFieldDAQ FieldDAQ1]
+ProductType = FD-11601
+DevSerialNum = 0x0
+DevIsSimulated = 1
+BusType = TCP/IP
+TCPIP.Hostname = 
+TCPIP.EthernetIP = 0.0.0.0
+TCPIP.EthernetMAC = 00:00:00:00:00:00
+TCPIP.EthernetMDNSServiceInstance = 
+TCPIP.DevIsReserved = 0
+
+[DAQmxFieldDAQBank FieldDAQ1-Bank1]
+ProductType = FD-11601
+DevSerialNum = 0x0
+DevIsSimulated = 1
+FieldDAQ.BankNum = 1
+FieldDAQ.DevName = FieldDAQ1
+
+[DAQmxFieldDAQBank FieldDAQ1-Bank2]
+ProductType = FD-11601
+DevSerialNum = 0x0
+DevIsSimulated = 1
+FieldDAQ.BankNum = 2
+FieldDAQ.DevName = FieldDAQ1
