add digital and counter channel tests

--- a/tests/max_config/nidaqmxMaxConfig.ini
+++ b/tests/max_config/nidaqmxMaxConfig.ini
@@ -107,6 +107,13 @@ PreScaledUnits = Volts
 ScaledUnits = 
 ScaleType = Polynomial
 
+[DAQmxScale degrees_scale]
+Lin.Slope = 2
+Lin.YIntercept = 0
+PreScaledUnits = Degrees
+ScaledUnits = potatoes
+ScaleType = Linear
+
 [DAQmxDevice aoTester]
 ProductType = PXIe-4322
 DevSerialNum = 0x0
@@ -242,4 +249,11 @@ TCPIP.EthernetIP = 0.0.0.0
 TCPIP.EthernetMAC = 00:00:00:00:00:00
 TCPIP.EthernetMDNSServiceInstance = 
 TCPIP.DevIsReserved = 0
+
+[DAQmxCDAQModule cdaqTesterMod1]
+ProductType = NI 9361
+DevSerialNum = 0x0
+DevIsSimulated = 1
+CompactDAQ.ChassisDevName = cdaqChassisTester
+CompactDAQ.SlotNum = 1
 
