--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,9 @@ pytest-mock = ">=3.0"
 pykka = ">=3.0"
 tox = ">=3.24"
 
+[tool.poetry.scripts]
+install-daqmx-driver = 'nidaqmx._install_daqmx:install_daqmx_software'
+
 [tool.black]
 line-length = 100
 extend_exclude = ".tox/|docs/|generated/|src/codegen/metadata/|src/codegen/templates/|src/handwritten/"
