--- a/pyproject.toml
+++ b/pyproject.toml
@@ -112,9 +112,13 @@ plugins = "numpy.typing.mypy_plugin"
 
 [[tool.mypy.overrides]]
 module = [
-  "deprecation",
+  # https://github.com/briancurtin/deprecation/issues/56 - Add type information (PEP 561)
+  "deprecation.*",
   "grpc.experimental.*",
+  # https://github.com/ni/hightime/issues/4 - Add type annotations
+  "hightime.*",
   "importlib_metadata",
-  "mako.*"
+  "mako.*",
+  "nidaqmx.*",
 ]
 ignore_missing_imports = true
