--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,7 +108,11 @@ build-backend = "poetry.masonry.api"
 
 [tool.mypy]
 check_untyped_defs = true
+namespace_packages = true
 plugins = "numpy.typing.mypy_plugin"
+warn_redundant_casts = true
+warn_unreachable = true
+warn_unused_configs = true
 
 [[tool.mypy.overrides]]
 module = [
