tests: Fix mypy errors and run mypy during PR build (#505)
* mypy: Update missing imports

* tests: Fix mypy errors in _grpc_utils.py

* tests: Fix mypy errors in conftest.py

tests\conftest.py:56: error: Variable "pytest.ParameterSet" is not valid as a type  [valid-type]
tests\conftest.py:56: note: See https://mypy.readthedocs.io/en/stable/common_issues.html#variables-vs-type-aliases
tests\conftest.py:280: error: Bracketed expression "[...]" is not valid as a type  [valid-type]
tests\conftest.py:280: note: Did you mean "List[...]"?

* tests: Fix mypy errors in _grpc_utils.py

tests\unit\_grpc_utils.py:10: error: Incompatible types in assignment (expression has type "None", variable has type Module)  [assignment]

tests/_grpc_utils.py:24: error: Item "None" of "IO[bytes] | None" has no attribute "readline"  [union-attr]
tests/_grpc_utils.py:57: error: Module has no attribute "ConnectRegistry"  [attr-defined]
tests/_grpc_utils.py:57: error: Module has no attribute "HKEY_LOCAL_MACHINE"  [attr-defined]
tests/_grpc_utils.py:58: error: Module has no attribute "KEY_READ"  [attr-defined]
tests/_grpc_utils.py:58: error: Module has no attribute "KEY_WOW64_64KEY"  [attr-defined]
tests/_grpc_utils.py:59: error: Module has no attribute "OpenKey"  [attr-defined]
tests/_grpc_utils.py:62: error: Module has no attribute "QueryValueEx"  [attr-defined]

* tests: Fix mypy errors in test_grpc_time.py

tests\unit\test_grpc_time.py:18: error: Cannot assign to a type  [misc]
tests\unit\test_grpc_time.py:18: error: Incompatible types in assignment (expression has type "None", variable has type "type[Timestamp]")  [assignment]

* tests: Fix mypy errors for test_utils.py

tests\legacy\test_utils.py:28: error: Need type annotation for "unflattened_channels" (hint: "unflattened_channels: List[<type>] = ...")  [var-annotated]

* tests: Fix mypy errors in test_invalid_writes.py

tests\legacy\test_invalid_writes.py:58: error: Argument 1 to "floating" has incompat

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,13 +108,21 @@ build-backend = "poetry.masonry.api"
 
 [tool.mypy]
 check_untyped_defs = true
+namespace_packages = true
 plugins = "numpy.typing.mypy_plugin"
+warn_redundant_casts = true
+warn_unreachable = true
+warn_unused_configs = true
 
 [[tool.mypy.overrides]]
 module = [
-  "deprecation",
+  # https://github.com/briancurtin/deprecation/issues/56 - Add type information (PEP 561)
+  "deprecation.*",
   "grpc.experimental.*",
+  # https://github.com/ni/hightime/issues/4 - Add type annotations
+  "hightime.*",
   "importlib_metadata",
-  "mako.*"
+  "mako.*",
+  "nidaqmx.*",
 ]
 ignore_missing_imports = true
