--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ grpcio = {version=">=1.49.0,<2.0", optional = true}
 protobuf = { version = "^4.21", optional = true }
 hightime = "^0.2.1"
 tzlocal = "^5.0"
+python-decouple = "^3.8"
 
 [tool.poetry.extras]
 docs = ["sphinx", "sphinx_rtd_theme"]
