handwritten: Fix mypy errors with recent _lib.py changes
generated\nidaqmx\_lib.py:10: error: Skipping analyzing "decouple": module is installed, but missing library stubs or py.typed marker  [import-untyped]
generated\nidaqmx\_lib.py:10: note: See https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-imports

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -118,6 +118,8 @@ warn_unused_configs = true
 
 [[tool.mypy.overrides]]
 module = [
+  # https://github.com/HBNetwork/python-decouple/issues/122 - Add support for type stubs
+  "decouple.*",
   # https://github.com/briancurtin/deprecation/issues/56 - Add type information (PEP 561)
   "deprecation.*",
   "grpc.experimental.*",
