add internationalization test

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@
 
 [tox]
 isolated_build = true
-envlist = clean, py{38,39,310,311,312}-base, py{38,39,310,311,312}-grpc, report, docs
+envlist = clean, py{38,39,310,311,312}-base, py{38,39,310,311,312}-grpc, nicaiu, nicai_utf8, report, docs
 
 [testenv]
 skip_install = true
@@ -19,6 +19,14 @@ commands =
    poetry run python --version
    poetry install -v {env:INSTALL_OPTS}
    poetry run pytest --quiet --cov=generated/nidaqmx --cov-append --cov-report= --junitxml=test_results/system-{envname}.xml {env:PYTEST_OPTS} {posargs}
+
+[testenv:nicaiu]
+setenv =
+   NIDAQMX_C_LIBRARY = nicaiu
+
+[testenv:nicai_utf8]
+setenv =
+   NIDAQMX_C_LIBRARY = nicai_utf8
 
 [testenv:clean]
 commands = poetry run coverage erase
