Add Tox Env for Internationalization Testing (#532)
* add internationalization test

* address comments

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@
 
 [tox]
 isolated_build = true
-envlist = clean, py{38,39,310,311,312}-base, py{38,39,310,311,312}-grpc, report, docs
+envlist = clean, py{38,39,310,311,312}-base, py{38,39,310,311,312}-grpc, py39-base-nicaiu, py39-base-nicai_utf8, report, docs
 
 [testenv]
 skip_install = true
@@ -15,9 +15,15 @@ setenv =
    grpc: INSTALL_OPTS=--only main,test --extras grpc
    base: PYTEST_OPTS=-k "not grpc"
    grpc: PYTEST_OPTS=
+   nicaiu: NIDAQMX_C_LIBRARY=nicaiu
+   nicai_utf8: NIDAQMX_C_LIBRARY=nicai_utf8
+platform = 
+   nicaiu: win32
+   nicai_utf8: win32
 commands =
    poetry run python --version
    poetry install -v {env:INSTALL_OPTS}
+   poetry run python -c "from nidaqmx._lib import lib_importer; print(f'Library: {lib_importer.windll._library._name}\nLibrary encoding: {lib_importer.encoding}')"
    poetry run pytest --quiet --cov=generated/nidaqmx --cov-append --cov-report= --junitxml=test_results/system-{envname}.xml {env:PYTEST_OPTS} {posargs}
 
 [testenv:clean]
