--- a/.github/workflows/run_system_tests.yml
+++ b/.github/workflows/run_system_tests.yml
@@ -23,6 +23,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Install dependencies
         run: poetry install
+      - name: check installdriver subcommand can be invoked
+        run: poetry run nidaqmx installdriver --help
       - name: Run system tests
         run: poetry run tox
       - name: Rename test results
