--- a/tests/max_config/nidaqmxMaxConfig.ini
+++ b/tests/max_config/nidaqmxMaxConfig.ini
@@ -263,3 +263,17 @@ DevSerialNum = 0x0
 DevIsSimulated = 1
 CompactDAQ.ChassisDevName = cdaqChassisTester
 CompactDAQ.SlotNum = 2
+
+[DAQmxCDAQModule cdaqTesterMod3]
+ProductType = NI 9263
+DevSerialNum = 0x0
+DevIsSimulated = 1
+CompactDAQ.ChassisDevName = cdaqChassisTester
+CompactDAQ.SlotNum = 3
+
+[DAQmxCDAQModule cdaqTesterMod4]
+ProductType = NI 9401
+DevSerialNum = 0x0
+DevIsSimulated = 1
+CompactDAQ.ChassisDevName = cdaqChassisTester
+CompactDAQ.SlotNum = 4
