--- a/.github/workflows/run_unit_tests.yml
+++ b/.github/workflows/run_unit_tests.yml
@@ -32,6 +32,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           poetry install
+      - name: check installdriver subcommand can be invoked
+        run: poetry run nidaqmx installdriver --help
       - name: Run unit tests
         run: poetry run pytest -v --cov=generated/nidaqmx --junitxml=test_results/unit-${{ matrix.os }}-py${{ matrix.python-version }}.xml tests/unit
       - name: Upload test results
