Component tests for Global Chans, Task Done, and Watchdog (#548)
* Add fixtures for added simulated devices

* Add configuration for new simulated devices

* Additional component tests

* Change to 9189 for more slots

* Fix linting errors

* Update tests/max_config/nidaqmxMaxConfig.ini

Co-authored-by: Zach Hindes <zach.hindes@ni.com>

* Review comments

* More linting fixes

* Review comments

* Fix lint issues

* Missing change

* Missing pytest.fixtures statement

* Update tests/component/system/storage/test_persisted_channel.py

Co-authored-by: Brad Keryan <brad.keryan@ni.com>

* Update tests/component/test_watchdog.py

Co-authored-by: Brad Keryan <brad.keryan@ni.com>

* Update tests/component/test_watchdog.py

Co-authored-by: Brad Keryan <brad.keryan@ni.com>

* Update tests/component/test_watchdog.py

Co-authored-by: Brad Keryan <brad.keryan@ni.com>

* Update tests/component/test_watchdog.py

Co-authored-by: Brad Keryan <brad.keryan@ni.com>

* Fix lint issues

---------

Co-authored-by: Zach Hindes <zach.hindes@ni.com>
Co-authored-by: Brad Keryan <brad.keryan@ni.com>

--- a/tests/max_config/nidaqmxMaxConfig.ini
+++ b/tests/max_config/nidaqmxMaxConfig.ini
@@ -240,7 +240,7 @@ CompactDAQ.ChassisDevName = tsChassisTester
 CompactDAQ.SlotNum = 3
 
 [DAQmxCDAQChassis cdaqChassisTester]
-ProductType = cDAQ-9185
+ProductType = cDAQ-9189
 DevSerialNum = 0x0
 DevIsSimulated = 1
 BusType = TCP/IP
@@ -270,3 +270,17 @@ DevSerialNum = 0x0
 DevIsSimulated = 1
 CompactDAQ.ChassisDevName = cdaqChassisTester
 CompactDAQ.SlotNum = 3
+
+[DAQmxCDAQModule cdaqTesterMod4]
+ProductType = NI 9401
+DevSerialNum = 0x0
+DevIsSimulated = 1
+CompactDAQ.ChassisDevName = cdaqChassisTester
+CompactDAQ.SlotNum = 4
+
+[DAQmxCDAQModule cdaqTesterMod5]
+ProductType = NI 9263
+DevSerialNum = 0x0
+DevIsSimulated = 1
+CompactDAQ.ChassisDevName = cdaqChassisTester
+CompactDAQ.SlotNum = 5
