--- a/tests/max_config/linux/nidaqmxMaxConfig.ini
+++ b/tests/max_config/linux/nidaqmxMaxConfig.ini
@@ -233,7 +233,7 @@ CompactDAQ.ChassisDevName = tsChassisTester
 CompactDAQ.SlotNum = 3
 
 [DAQmxCDAQChassis cdaqChassisTester]
-ProductType = cDAQ-9185
+ProductType = cDAQ-9189
 DevSerialNum = 0x0
 DevIsSimulated = 1
 BusType = TCP/IP
@@ -256,3 +256,17 @@ DevSerialNum = 0x0
 DevIsSimulated = 1
 CompactDAQ.ChassisDevName = cdaqChassisTester
 CompactDAQ.SlotNum = 2
+
+[DAQmxCDAQModule cdaqTesterMod4]
+ProductType = NI 9401
+DevSerialNum = 0x0
+DevIsSimulated = 1
+CompactDAQ.ChassisDevName = cdaqChassisTester
+CompactDAQ.SlotNum = 4
+
+[DAQmxCDAQModule cdaqTesterMod5]
+ProductType = NI 9263
+DevSerialNum = 0x0
+DevIsSimulated = 1
+CompactDAQ.ChassisDevName = cdaqChassisTester
+CompactDAQ.SlotNum = 5
