--- a/.github/workflows/run_unit_tests.yml
+++ b/.github/workflows/run_unit_tests.yml
@@ -28,12 +28,14 @@ jobs:
           poetry-version: "1.4.0"
       - name: Check Poetry version
         run: poetry --version
-      - name: Install dependencies
+      - name: Install main package dependencies
         run: |
           python -m pip install --upgrade pip
-          poetry install
+          poetry install --only main
       - name: check installdriver subcommand can be invoked
         run: poetry run nidaqmx installdriver --help
+      - name: Install dev dependencies
+        run: poetry install
       - name: Run unit tests
         run: poetry run pytest -v --cov=generated/nidaqmx --junitxml=test_results/unit-${{ matrix.os }}-py${{ matrix.python-version }}.xml tests/unit
       - name: Upload test results
