--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ protobuf = { version = "^4.21", optional = true }
 hightime = "^0.2.1"
 tzlocal = "^5.0"
 python-decouple = ">=3.8"
+click = ">=8.0.0"
 
 [tool.poetry.extras]
 docs = ["sphinx", "sphinx_rtd_theme"]
@@ -73,6 +74,9 @@ pytest-cov = ">=4.0"
 pytest-mock = ">=3.0"
 pykka = ">=3.0"
 tox = ">=3.24"
+
+[tool.poetry.scripts]
+nidaqmx = 'nidaqmx.__main__:main'
 
 [tool.black]
 line-length = 100
