--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,10 +29,14 @@ jobs:
       - name: Run linters
         run: |
           poetry run ni-python-styleguide lint
-      - name: Run mypy
+      - name: Run mypy (Linux)
         run: |
           poetry run mypy generated/nidaqmx
           poetry run mypy tests
+      - name: Run mypy (Windows)
+        run: |
+          poetry run mypy generated/nidaqmx --platform win32
+          poetry run mypy tests --platform win32
       - name: Generate ni-daqmx files
         run: |
           rm -fr generated/nidaqmx
