--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "1.0.0-dev1"
 license = "MIT"
 description = "NI-DAQmx Python API"
 authors = ["NI <opensource@ni.com>"]
-maintainers = ["Zach Hindes <zach.hindes@ni.com>", "Maxx Boehme <maxx.boehme@ni.com>, Brad Keryan <brad.keryan@ni.com>"]
+maintainers = ["Zach Hindes <zach.hindes@ni.com>", "Maxx Boehme <maxx.boehme@ni.com>", "Brad Keryan <brad.keryan@ni.com>"]
 readme = "README.rst"
 repository = "https://github.com/ni/nidaqmx-python"
 documentation = "https://nidaqmx-python.readthedocs.io"
