--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ sphinx_rtd_theme = {version=">=1.0", optional=true}
 grpcio = {version=">=1.49.0,<2.0", optional=true}
 protobuf = {version="^4.21", optional=true}
 hightime = "^0.2.2"
-toml = {version="^0.10.2", optional=true}
+toml = {version=">=0.10.2", optional=true}
 tzlocal = "^5.0"
 python-decouple = ">=3.8"
 click = ">=8.0.0"
