--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "1.0.0-dev1"
 license = "MIT"
 description = "NI-DAQmx Python API"
 authors = ["NI <opensource@ni.com>"]
-maintainers = ["Zach Hindes <zach.hindes@ni.com>", "Maxx Boehme <maxx.boehme@ni.com>"]
+maintainers = ["Zach Hindes <zach.hindes@ni.com>", "Maxx Boehme <maxx.boehme@ni.com>", "Brad Keryan <brad.keryan@ni.com>"]
 readme = "README.rst"
 repository = "https://github.com/ni/nidaqmx-python"
 documentation = "https://nidaqmx-python.readthedocs.io"
@@ -42,16 +42,17 @@ deprecation = ">=2.1"
 # See https://github.com/readthedocs/readthedocs.org/issues/4912.
 Sphinx = {version=">=5.0", optional=true}
 sphinx_rtd_theme = {version=">=1.0", optional=true}
-grpcio = {version=">=1.49.0,<2.0", optional = true}
-protobuf = { version = "^4.21", optional = true }
+grpcio = {version=">=1.49.0,<2.0", optional=true}
+protobuf = {version="^4.21", optional=true}
 hightime = "^0.2.2"
+toml = {version=">=0.10.2", optional=true}
 tzlocal = "^5.0"
 python-decouple = ">=3.8"
 click = ">=8.0.0"
 
 
 [tool.poetry.extras]
-docs = ["sphinx", "sphinx_rtd_theme"]
+docs = ["sphinx", "sphinx_rtd_theme", "toml"]
 grpc = ["grpcio", "protobuf"]
 
 [tool.poetry.group.codegen.dependencies]
