--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ toml = {version=">=0.10.2", optional=true}
 tzlocal = "^5.0"
 python-decouple = ">=3.8"
 click = ">=8.0.0"
-distro = "^1.9.0"
+distro = ">=1.9.0"
 
 
 [tool.poetry.extras]
