set npTDMS matplotlib as example dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,8 +49,6 @@ toml = {version=">=0.10.2", optional=true}
 tzlocal = "^5.0"
 python-decouple = ">=3.8"
 click = ">=8.0.0"
-nptdms = "^1.9.0"
-matplotlib = {version=">=3.9.0", python = ">=3.9"}
 
 
 [tool.poetry.extras]
@@ -65,6 +63,10 @@ grpcio-tools = [
   {version = "1.59.0", python = "^3.12"},
 ]
 mypy-protobuf = ">=3.4"
+
+[tool.poetry.group.example.dependencies]
+nptdms = ">=1.9.0"
+matplotlib = {version=">=3.9.0", python = ">=3.9"}
 
 [tool.poetry.group.lint.dependencies]
 ni-python-styleguide = ">=0.4.1"
