--- a/tests/max_config/linux/nidaqmxMaxConfig.ini
+++ b/tests/max_config/linux/nidaqmxMaxConfig.ini
@@ -188,6 +188,15 @@ BusType = PCIe
 PCI.BusNum = 0x0
 PCI.DevNum = 0x0
 
+[DAQmxDevice digitalPatternTester]
+ProductType = PCIe-6535
+DevSerialNum = 0x0
+DevIsSimulated = 1
+ProductNum = 0x719F
+BusType = PCIe
+PCI.BusNum = 0x0
+PCI.DevNum = 0x0
+
 [DAQmxDevice positionTester]
 ProductType = PXIe-4340
 DevSerialNum = 0x0
