address review feedback

--- a/tests/max_config/nidaqmxMaxConfig.ini
+++ b/tests/max_config/nidaqmxMaxConfig.ini
@@ -195,7 +195,7 @@ BusType = PCIe
 PCI.BusNum = 0x0
 PCI.DevNum = 0x0
 
-[DAQmxDevice digitalPatternTester]
+[DAQmxDevice hsdioTester]
 ProductType = PCIe-6535
 DevSerialNum = 0x0
 DevIsSimulated = 1
