--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,7 +64,12 @@ grpcio-tools = [
 ]
 mypy-protobuf = ">=3.4"
 
-[tool.poetry.group.example.dependencies]
+[tool.poetry.group.examples]
+# The "examples" group is optional because matplotlib does not distribute wheels for 32-bit Windows.
+optional = true
+
+[tool.poetry.group.examples.dependencies]
+matplotlib = {version=">=3.9.0", python = ">=3.9"}
 nptdms = ">=1.9.0"
 
 [tool.poetry.group.lint.dependencies]
