Add examples to demonstrate TDMS logging and data plotting (#594)
* Add examples to demonstrate TDMS logging and data plotting

* set npTDMS matplotlib as example dependencies

* removed matplotlib to fix python 32 bit error

* update docstring in examples

* set examples group optional

* updated tdms logging example

* skip tdms logging test from pytest

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,14 @@ grpcio-tools = [
 ]
 mypy-protobuf = ">=3.4"
 
+[tool.poetry.group.examples]
+# The "examples" group is optional because matplotlib does not distribute wheels for 32-bit Windows.
+optional = true
+
+[tool.poetry.group.examples.dependencies]
+matplotlib = {version=">=3.9.0", python = ">=3.9"}
+nptdms = ">=1.9.0"
+
 [tool.poetry.group.lint.dependencies]
 ni-python-styleguide = ">=0.4.1"
 mypy = ">=1.0"
