--- a/.github/workflows/report_test_results.yml
+++ b/.github/workflows/report_test_results.yml
@@ -16,10 +16,11 @@ jobs:
       - name: Check out repo
         uses: actions/checkout@v3
       - name: Download test results
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
-          name: test_results
           path: test_results
+          pattern: test_results_*
+          merge-multiple: true
       - name: List downloaded files
         run: ls -lR
       - name: Publish test results
