--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,7 +78,9 @@ nptdms = ">=1.9.0"
 ni-python-styleguide = ">=0.4.1"
 mypy = ">=1.0"
 types-protobuf = "^4.21"
+types-requests = ">=2.25.0"
 grpc-stubs = "^1.53"
+
 
 [tool.poetry.group.test.dependencies]
 pytest = ">=7.2"
