--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ tzlocal = "^5.0"
 python-decouple = ">=3.8"
 click = ">=8.0.0"
 distro = { version = ">=1.9.0", platform = "linux" }
+requests = ">=2.25.0"
 
 
 [tool.poetry.extras]
@@ -77,7 +78,9 @@ nptdms = ">=1.9.0"
 ni-python-styleguide = ">=0.4.1"
 mypy = ">=1.0"
 types-protobuf = "^4.21"
+types-requests = ">=2.25.0"
 grpc-stubs = "^1.53"
+
 
 [tool.poetry.group.test.dependencies]
 pytest = ">=7.2"
