--- a/pyproject.toml
+++ b/pyproject.toml
@@ -127,7 +127,7 @@ requires = ["poetry>=1.2"]
 build-backend = "poetry.masonry.api"
 
 [tool.mypy]
-files = "generated/nidaqmx/,tests/"
+files = "generated/,tests/"
 check_untyped_defs = true
 namespace_packages = true
 plugins = "numpy.typing.mypy_plugin"
