CONTRIBUTING.md: Add info on running linters and simplify mypy invocation (#612)
* CONTRIBUTING.md: Add info on running linters

* pyproject.toml: Specify mypy files to check

* handwritten: Fix tzinfo type hints

tests\unit\test_lib_time.py:109: error: Argument "tzinfo" to "to_datetime" of "AbsoluteTime" has incompatible type "ZoneInfo"; expected "Optional[timezone]"  [arg-type]
tests\unit\test_grpc_time.py:132: error: Argument "tzinfo" to "convert_timestamp_to_time" has incompatible type "ZoneInfo"; expected "Optional[timezone]"  [arg-type]

* tests: Fix type hints and a mypy-identified test bug

tests\component\test_watchdog.py:10: error: "Task" not callable  [operator]
tests\component\test_watchdog.py:41: error: "Task" not callable  [operator]
tests\component\test_watchdog.py:67: error: "Task" not callable  [operator]
tests\component\test_interpreter.py:45: error: Invalid index type "int" for "dict[DAQmxErrors, str]"; expected type "DAQmxErrors"  [index]
tests\component\task\test_in_stream_read_properties.py:139: error: Incompatible types in assignment (expression has type "str", variable has type "Optional[Path]")  [assignment]
tests\component\task\test_in_stream_read_properties.py:159: error: Incompatible types in assignment (expression has type "str", variable has type "Optional[Path]")  [assignment]
tests\component\task\channels\test_channel_properties.py:216: error: "Scale" has no attribute "load"  [attr-defined]
tests\acceptance\test_multi_threading.py:126: error: Argument 4 to "submit" of "Executor" has incompatible type "Task"; expected "AIChannel"  [arg-type]
tests\acceptance\test_multi_threading.py:135: error: Argument 4 to "submit" of "Executor" has incompatible type "Task"; expected "AIChannel"  [arg-type]
tests\acceptance\test_internationalization.py:69: error: Incompatible types in assignment (expression has type "str", variable has type "Optional[Path]")  [assignment]
tests\unit\test_task_events.py:40: error: Argument 3 to "re

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -127,6 +127,7 @@ requires = ["poetry>=1.2"]
 build-backend = "poetry.masonry.api"
 
 [tool.mypy]
+files = "generated/,tests/"
 check_untyped_defs = true
 namespace_packages = true
 plugins = "numpy.typing.mypy_plugin"
