github: Run Bandit in build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,8 @@ jobs:
         run: poetry run mypy
       - name: Run mypy (Windows)
         run: poetry run mypy --platform win32
+      - name: Run Bandit security checks
+        run: poetry run bandit -c pyproject.toml -r generated/nidaqmx
       - name: Generate ni-daqmx files
         run: |
           rm -fr generated/nidaqmx
