--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ python = "^3.8"
 numpy = [
   {version = ">=1.22", python = ">=3.8,<3.12"},
   {version = ">=1.26", python = ">=3.12,<3.13"},
+  {version = ">=2.1", python = "^3.13"},
 ]
 deprecation = ">=2.1"
 # Documentation, must be in main dependencies (but optional) list for
@@ -43,7 +44,7 @@ deprecation = ">=2.1"
 Sphinx = {version=">=5.0", optional=true}
 sphinx_rtd_theme = {version=">=1.0", optional=true}
 grpcio = {version=">=1.49.0,<2.0", optional=true}
-protobuf = {version="^4.21", optional=true}
+protobuf = {version=">=4.21", optional=true}
 hightime = "^0.2.2"
 toml = {version=">=0.10.2", optional=true}
 tzlocal = "^5.0"
@@ -62,7 +63,8 @@ click = "^8.1"
 Mako = "^1.2"
 grpcio-tools = [
   {version = "1.49.1", python = ">=3.8,<3.12"},
-  {version = "1.59.0", python = "^3.12"},
+  {version = "1.59.0", python = ">=3.12,<3.13"},
+  {version = "1.67.0", python = "^3.13"},
 ]
 mypy-protobuf = ">=3.4"
 
@@ -77,7 +79,7 @@ nptdms = ">=1.9.0"
 [tool.poetry.group.lint.dependencies]
 ni-python-styleguide = ">=0.4.1"
 mypy = ">=1.0"
-types-protobuf = "^4.21"
+types-protobuf = ">=4.21"
 types-requests = ">=2.25.0"
 grpc-stubs = "^1.53"
 
