Add unit test cases for physical property access using mioDAQ

--- a/tests/max_config/nidaqmxMaxConfig.ini
+++ b/tests/max_config/nidaqmxMaxConfig.ini
@@ -293,3 +293,10 @@ DevSerialNum = 0x0
 DevIsSimulated = 1
 CompactDAQ.ChassisDevName = cdaqChassisTester
 CompactDAQ.SlotNum = 5
+
+[DAQmxDevice mioDAQ]
+ProductType = USB-6423
+DevSerialNum = 0x0
+DevIsSimulated = 1
+ProductNum = 0x7B40
+BusType = USB
