--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,13 +6,14 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: 
+    runs-on:
       - ubuntu-latest
     steps:
       - name: Check out repo
         uses: actions/checkout@v4
       - name: Set up Python
         uses: actions/setup-python@v5
+        id: setup-python
         with:
           # The codegen scripts require Python 3.9 or later.
           python-version: "3.9"
@@ -22,6 +23,11 @@ jobs:
           poetry-version: "1.8.3"
       - name: Check Poetry version
         run: poetry --version
+      - name: Cache virtualenv (all extras)
+        uses: actions/cache@v4
+        with:
+          path: .venv
+          key: nidaqmx-all-extras-${{ runner.os }}-py${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('poetry.lock') }}
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
