--- a/.github/workflows/generate_docs.yml
+++ b/.github/workflows/generate_docs.yml
@@ -13,6 +13,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Set up Python
         uses: actions/setup-python@v5
+        id: setup-python
         with:
           python-version: "3.9"
       - name: Set up Poetry
@@ -21,6 +22,13 @@ jobs:
           poetry-version: "1.8.3"
       - name: Check Poetry version
         run: poetry --version
+      - name: Cache virtualenvs
+        uses: actions/cache@v4
+        with:
+          path: |
+            .venv
+            .tox
+          key: generate-docs-${{ runner.os }}-py${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('poetry.lock') }}
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
