--- a/tox.ini
+++ b/tox.ini
@@ -36,9 +36,9 @@ commands =
 
 [testenv:docs]
 # base_python should match the version specified in .readthedocs.yml and the PR workflow.
-base_python = python3.9
+base_python = python3.11
 commands =
    poetry run python --version
-   poetry install -v --only main --extras docs
+   poetry install -v --only main,docs
    # Use -W to treat warnings as errors.
    poetry run sphinx-build -b html -W docs docs/_build
