github: Use ni/python-actions

--- a/.github/workflows/generate_docs.yml
+++ b/.github/workflows/generate_docs.yml
@@ -12,16 +12,10 @@ jobs:
       - name: Check out repo
         uses: actions/checkout@v4
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: ni/python-actions/setup-python@v0.1.0
         id: setup-python
-        with:
-          python-version: "3.11"
       - name: Set up Poetry
-        uses: Gr1N/setup-poetry@v9
-        with:
-          poetry-version: "1.8.3"
-      - name: Check Poetry version
-        run: poetry --version
+        uses: ni/python-actions/setup-poetry@v0.1.0
       - name: Cache virtualenvs
         uses: actions/cache@v4
         with:
