--- a/.github/workflows/run_unit_tests.yml
+++ b/.github/workflows/run_unit_tests.yml
@@ -19,15 +19,11 @@ jobs:
       - name: Check out repo
         uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
+        uses: ni/python-actions/setup-python@v0.1.0
         with:
           python-version: ${{ matrix.python-version }}
       - name: Set up Poetry
-        uses: Gr1N/setup-poetry@v9
-        with:
-          poetry-version: "1.8.3"
-      - name: Check Poetry version
-        run: poetry --version
+        uses: ni/python-actions/setup-poetry@v0.1.0
       - name: Restore cached virtualenv (main only)
         uses: actions/cache/restore@v4
         id: restore-nidaqmx-main-only
