--- a/tests/max_config/nidaqmxMaxConfig.ini
+++ b/tests/max_config/nidaqmxMaxConfig.ini
@@ -294,6 +294,13 @@ DevIsSimulated = 1
 CompactDAQ.ChassisDevName = cdaqChassisTester
 CompactDAQ.SlotNum = 5
 
+[DAQmxCDAQModule cdaqTesterMod6]
+ProductType = NI 9205
+DevSerialNum = 0x0
+DevIsSimulated = 1
+CompactDAQ.ChassisDevName = cdaqChassisTester
+CompactDAQ.SlotNum = 6
+
 [DAQmxDevice mioDAQ]
 ProductType = USB-6423
 DevSerialNum = 0x0
